Spacing issues / bugfix

--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,8 @@ img {
     .progress {
         margin: 0 auto;
         width: 50%;
+        margin-top: .5em;
+        margin-bottom: .5em;
     }
 /* ==========================================================================
    Javascript Disabled
